Mastering Doctrine Relationship Symfony | Saving a Relationship

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,16 @@
 /phpunit.xml*
 /web/bundles/*
 
+!/var/cache
+/var/cache/*
+!var/cache/.gitkeep
+!/var/logs
+/var/logs/*
+!var/logs/.gitkeep
+!/var/sessions
+/var/sessions/*
+!var/sessions/.gitkeep
+
 # Logs and databases #
 ######################
 *.log
